# SmithTool

./: BUILD_WINDOWS.txt  CMakeLists.txt  PLAN.md  Readme.md  quick_start_Smith.sh
deploy/windows/: build.bat  smithtool.iss
examples/: sample.s1p
resources/: resources.qrc  smithtool.rc
resources/styles/: dark.qss  light.qss
src/: main.cpp
src/core/: component.cpp  component.h  impedance.cpp  impedance.h  matching.cpp  matching.h  smithmath.cpp  smithmath.h  trace.cpp  trace.h
src/data/: sparamdata.cpp  sparamdata.h  spiceexporter.cpp  spiceexporter.h  touchstone.cpp  touchstone.h
src/ui/: circuitview.cpp  circuitview.h  componenteditdialog.cpp  componenteditdialog.h  componentpanel.cpp  componentpanel.h  elementtoolbar.cpp  elementtoolbar.h  impedanceinputpanel.cpp  impedanceinputpanel.h  mainwindow.cpp  mainwindow.h  matchingwizard.cpp  matchingwizard.h  smithchartwidget.cpp  smithchartwidget.h
